--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "homepage-pereirajs",
-  "version": "0.0.0",
+  "version": "0.0.0-2",
   "description": "pagina web de pereirajs.org",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server ./"
+    "start": "./node_modules/.bin/http-server"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/pereirajs/pagina",
   "dependencies": {
     "http-server": "~0.6.1"
+  },
+  "subdomain": "pereirajs",
+  "engines": {
+    "node": "0.10.x"
   }
 }
