--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/http-server"
+    "start": "./node_modules/.bin/http-server --cors"
   },
   "repository": {
     "type": "git",
