--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homepage-pereirajs",
-  "version": "0.1.2-1",
+  "version": "0.1.3",
   "description": "página web de pereirajs.org",
   "main": "index.js",
   "scripts": {
