add style to item and awesome icon

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "@pereirajs",
   "license": "ISC",
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "isomorphic-fetch": "^2.2.1",
     "next": "^7.0.1",
     "react": "^16.5.2",
