--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pereirajs",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "description": "Página de PereiraJS",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "isomorphic-fetch": "^2.2.1",
     "next": "^7.0.1",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "semistandard": "^13.0.1"
   }
 }
