--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "isomorphic-fetch": "^2.2.1",
     "next": "^7.0.1",
     "react": "^16.5.2",
+    "react-countdown-now": "^2.1.1",
     "react-dom": "^16.5.2",
     "semistandard": "^13.0.1"
   }
